--- a/web/admin.xhtml
+++ b/web/admin.xhtml
@@ -1,15 +1,16 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:form>
-            <p>Welcome #{login.user}</p>
-            <h:commandLink action="#{login.logout}" value="Logout"></h:commandLink>
-        </h:form>
+        <h:form>       
+            <p>Welcome, #{login.uname}</p>
+        <p:commandButton action="#{login.logout}" value="Logout"  ajax="false"></p:commandButton>
+    </h:form>
     </h:body>
 </html>
 
